added left drawer functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,18 @@
         <item>-1</item>
     </string-array>
 
+
+    <!-- drawer!-->
+     <string-array name="menu_array">
+        <item>Current Location</item>
+        <item>Send Message</item>
+        <item>See Friends</item>
+    </string-array>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="action_websearch">Web search</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
