added jump to point (3 point or 2 point with current hight). added dialog fragment for handling position. removed support.v4 helpers - no need.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,15 @@
     <string name="menu_setting_friends">Friends</string>
     <string name="title_activity_friends">FriendsActivity</string>
     <string name="action_settings">Settings</string>
+
+    <!-- Goto Dialog-->
+    <string name="dialog_position_massage">where do you want to go?</string>
+    <string name="dialog_position_title">GoTo Dialog</string>
+
+    <string name="dialog_position_ok">Send Me</string>
+    <string name="dialog_position_cancel">Cancel</string>
+    <string name="latitude">Latitude: </string>
+    <string name="altitude">Altitude: </string>
+    <string name="longitude">Longitude: </string>
+    <string name="optional">(Optional)</string>
 </resources>
