--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,11 @@
         <item>Send Message</item>
         <item>See Friends</item>
     </string-array>
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_sync_black_24dp</item>
+        <item>@drawable/ic_info_black_24dp</item>
+        <item>@drawable/ic_notifications_black_24dp</item>
+    </array>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Web search</string>
@@ -96,8 +101,11 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="menu_location_title">Location</string>
     <string name="menu_setting_title">Settings</string>
     <string name="menu_setting_friends">Friends</string>
     <string name="title_activity_friends">FriendsActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="action_location">Location</string>
+    <string name="action_friends_">Friends</string>
 </resources>
