--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,8 @@
     <string name="optional">(Optional)</string>
     <string name="action_location">Location</string>
     <string name="action_friends_">Friends</string>
+
+    <!-- fragment show messages -->
     <string name="fragment_show_title">Incoming Messages</string>
     <string name="fragment_show_empty_messages">No Messages to show</string>
     <string name="fragment_show_positive">Next</string>
