--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,6 @@
     <string name="fragment_show_negative">Cancel</string>
     <string name="fragment_show_last">OK</string>
     <string name="fragment_show_counter">%1$d / %2$d</string>
+    <string name="fragment_show_neutral">Go To</string>
+    <string name="fragment_show_geo">geo: N: %1$.2f E: %2$.2f</string>
 </resources>
