--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,9 @@
     <string name="title_activity_friends">FriendsActivity</string>
     <string name="action_settings">Settings</string>
 
+    <!-- Send Geo Message Dialog-->
+    <string name="dialog_send_massage_geo">Send Coordinates</string>
+    <string name="dialog_send_message_geo_title">Send coordiantes</string>
     <!-- Send Message Dialog-->
     <string name="dialog_send_massage_text">Send your message</string>
     <string name="dialog_send_message_title">Send Message</string>
