--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="dialog_go_to_invalid_input">Invalid input!</string>
     <string name="enter_text_hint">Enter text here..</string>
     <string name="dialog_send_message_invalid_empty_message">Message is empty!</string>
+    <string name="viewer_my_location_name">My_Location</string>
 </resources>
