--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,7 @@
     <!--user location-->
     <string name="viewer_my_location_name">My_Location</string>
     <string name="viewer_self_icon_assets_path">mipmap/target-center-red.png</string>
+
+    <!-- Image Dialog -->
+    <string name="dialog_image_source_type">Source:</string>
 </resources>
