Changed dialog and fixed the dialog when there is no location with the image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
 
     <!-- Image Dialog -->
     <string name="dialog_image_source_type">Source:</string>
+    <string name="dialog_image_location_unavailable">Unavailable</string>
 </resources>
