Added "locate me" FAB (in ViewerFragment) that zooms to last known location on click. Changed FABs icon colors to white. Removed unused ViewBindings to FABs (Only OnClick binding is needed) Added config integer to determine viewer's camera height on "locate me" clicks Added string resource for display on a toast when no last known location is available

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,4 +138,5 @@
     <!-- Dialog Buttons -->
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
+    <string name="locate_me_fab_no_known_location">Location unknown</string>
 </resources>
