Refactored LocationFetcher:     Uses an internal LocationListener and handles new location events by broadcasting them with an appended LocationSample (instead of native Location object)     Made both LocationSample and PointGeometry implement the Parcelable interface (in-order to pass LocationSample in broadcast intent using a Bundle)     Fixed registering receivers to use newly parceled LocationSample
Added "No gps signal" alert when GPS is unavailable or its accuracy is bad (how bad can be configured via the config.xml file)

Changed location_threshold_update_distance_m config type from string to int

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,6 +134,7 @@
     <!-- GPS messages -->
     <string name="gps_off_title">GPS is disabled</string>
     <string name="gps_off_message">Your GPS seems to be disabled, do you want to enable it?</string>
+    <string name="no_gps_signal">No GPS signal</string>
 
     <!-- Dialog Buttons -->
     <string name="dialog_yes">Yes</string>
