--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,7 @@
     <string name="dialog_image_location_unavailable">Unavailable</string>
     <string name="dialog_image_sender_id">Sender ID:</string>
 
+    <!-- Messages Fragment-->
+    <string name="fragment_messages_master_message_type">Message Type</string>
+
 </resources>
