ViewHolder in Adapter and using Interface for Data access

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,5 +174,6 @@
 
     <!-- Messages Fragment-->
     <string name="fragment_messages_master_message_type">Message Type</string>
+    <string name="message_list_item_time">HH:mm:ss</string>
 
 </resources>
