--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,7 +177,7 @@
     <string name="message_list_item_time">HH:mm:ss</string>
 
     <!-- Main Activity -->
-    <string name="username_default">Username</string>
+    <string name="username_default">@string/pref_default_display_name</string>
     <string name="navigation_home_item">Home</string>
     <string name="navigation_vector_item">Vector Manipulation</string>
     <string name="navigation_map_item">Map Manipulation</string>
