--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,5 +191,6 @@
     <string name="fragment_messages_detail_goto">Go To</string>
 
     <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
+    <string name="information_title">Information</string>
 
 </resources>
