--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,12 +177,8 @@
     <string name="fragment_messages_image_source_type">Source:</string>
 
     <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
-    <string name="fragment_message_container_details_placeholder">Click on Message for details
-    </string>
+    <string name="fragment_message_container_details_placeholder">Click on Message for details</string>
     <string name="fragment_messages_image_location_unavailable">Unavailable</string>
     <string name="information_title">Information</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
