--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="activity_launcher_title">@string/app_name</string>
     <string name="activity_main_title">MainActivity</string>
 
-    <string name="fragment_friends_title">Friends</string>
+    <string name="geo_dd_format">N: %1$.6f E: %2$.6f</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <!--todo: clean-->
@@ -37,6 +37,7 @@
         <item>0</item>
         <item>-1</item>
     </string-array>
+
     <!-- drawer!-->
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
@@ -138,7 +139,6 @@
     <string name="dialog_go_to_longitude_text">Longitude:</string>
     <string name="dialog_go_to_optional_hint">(Optional)</string>
     <string name="dialog_go_to_invalid_input">Invalid input!</string>
-    <string name="dialog_goto_show_geo">geo: N: %1$.2f E: %2$.2f</string>
     <string name="enter_text_hint">Enter text here..</string>
 
     <!--user location-->
@@ -182,5 +182,8 @@
     <string name="fragment_message_container_details_placeholder">Click on Message for details</string>
     <string name="fragment_messages_image_location_unavailable">Unavailable</string>
     <string name="information_title">Information</string>
+    <string name="fragment_message_detail_geo_location">Location</string>
+    <string name="fragment_message_detail_geo_type">Location Type</string>
+    <string name="fragment_message_detail_geo_text">message</string>
 
 </resources>
