--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="menu_setting_title">Settings</string>
     <string name="menu_setting_friends">Friends</string>
     <string name="menu_action_settings">Settings</string>
+    <string name="menu_action_clear_map">Clear Map</string>
 
     <!-- Send Geo Message Dialog-->
     <string name="dialog_send_massage_geo">Send Coordinates</string>
