--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,7 +125,9 @@
     <!-- Send Geo MessageApp Dialog-->
     <string name="dialog_send_massage_geo">Send Coordinates</string>
     <string name="dialog_send_message_geo_title">Send coordiantes</string>
-    <string name="dialog_validation_failed_geo_text_message">Please enter location description</string>
+    <string name="dialog_validation_failed_geo_text_message">
+        Please enter location description
+    </string>
 
     <!-- Send MessageApp Dialog-->
     <string name="dialog_send_massage_text">Send your message</string>
@@ -183,7 +185,9 @@
     <string name="fragment_messages_image_source_type">Source:</string>
 
     <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
-    <string name="fragment_message_container_details_placeholder">Click on Message for details</string>
+    <string name="fragment_message_container_details_placeholder">
+        Click on Message for details
+    </string>
     <string name="fragment_messages_image_location_unavailable">Unavailable</string>
     <string name="information_title">Information</string>
     <string name="fragment_message_detail_geo_location">Location</string>
@@ -203,5 +207,6 @@
         <item>Messages</item>
     </string-array>
     <string name="bottom_panel_messages_counter">" (%1$d)"</string>
+    <string name="nav_menu_group_title_layers">Map Layers</string>
 
 </resources>
