Changed the implementation of the bottom panel adapter to know nothing about its pages, but instead allow dynamically adding pages by a polymorphic call to its FragmentFactory's (newly introduced interface) create method. Things now work as usual.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,6 +211,8 @@
         <item>Sensors</item>
         <item>Messages</item>
     </string-array>
+    <string name="sensors_container_title">Sensors</string>
+    <string name="messages_container_title">Messages</string>
     <string name="bottom_panel_messages_counter">" (%1$d)"</string>
     <string name="nav_menu_group_title_layers">Map Layers</string>
 
