Created new fragment and layout, not yet designed...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,6 +206,7 @@
     <string name="sensors_container_title">Sensors</string>
     <string name="messages_container_title">Messages</string>
     <string name="bottom_panel_messages_counter">" (%1$d)"</string>
+    <string name="map_entity_details_container_title">"Layer Entity Details: %1$s"</string>
 
     <!--Name Generator-->
     <string-array name="name_generator_animals">
