Refactored Connectivity Alerts View & ViewModel - it's now easier to add a new kind of connectivity alert. Added 3GConnectivityAlert.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,10 +154,11 @@
     <!-- GPS messages -->
     <string name="gps_off_title">GPS is disabled</string>
     <string name="gps_off_message">Your GPS seems to be disabled, do you want to enable it?</string>
-    <string name="no_gps_signal">No GPS signal</string>
 
-    <!-- Network Messages -->
-    <string name="no_network">No Network / Internet Connection</string>
+    <!-- Connectivity Alerts-->
+    <string name="no_gps_signal">No GPS signal</string>
+    <string name="no_network">No Network</string>
+    <string name="no_3g_network">No 3G Network</string>
 
     <!-- Dialog Buttons -->
     <string name="dialog_yes">Yes</string>
