--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,7 +208,8 @@
     <string name="sensors_container_title">Sensors</string>
     <string name="messages_container_title">Messages</string>
     <string name="bottom_panel_messages_counter">" (%1$d)"</string>
-    <string name="map_entity_details_container_title">"Layer Entity Details: %1$s"</string>
+    <string name="map_entity_details_container_title">"Details: %1$s"</string>
+    <string name="vector_layer_title_prefix">"Layer: "</string>
     <string name="nav_menu_group_title_layers">Map Layers</string>
 
     <string name="new_vector_layer_alert_notification">Vector Layer Update</string>
