Changed the unread count mechanism - a message is considered unread if its timestamp is after last *seen* message timestamp Updates the model and ui when scrolling the recycler-view and getting to see new messages
Indicates new incoming messages when the bottom panel in one of the following ways:
 1. if the recycler-view is scrolled all the way-down it'll scroll down to the new message
 2. if the recycler-view isn't scrolled all the way down, it'll pop up a snackbar indicating new message and clicking on it will scroll down.

 Fixed a couple more things:
 1. Fixed hack that has been used to discard "temporary" pages (from the bottom panel) that made the message-container-fragment to be re-instantiated every time the panel collapsed/uncollapsed
 2. Removed native logger usage by default since the log4j logger already outputs to both file and console log (native will be used if log4j initialization fails)
 3. Moved MessagePresentation creation to Data thread instead of UI Thread
 4. Used a builder to create MessagePresentation since the boolean flags were getting too high (to increase readability)
 5. Removed unused code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,6 +214,8 @@
 
     <string name="new_vector_layer_alert_notification">Vector Layer Update</string>
     <string name="new_alert_notification">New Alert!</string>
+    <string name="snackbar_new_message_text">New message</string>
+    <string name="snackbar_new_message_action_text">show</string>
 
     <!--Name Generator-->
     <string-array name="name_generator_animals">
