Refactored the toolbar into its own fragment. Added BoomMenuButton (a 3rd party open-source menu library) and 3 buttons to it to 3 future actions: send quadrilateral, draw geometry and measure distance.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,4 +340,8 @@
         <item>willing</item>
         <item>witty</item>
     </string-array>
+
+    <string name="menu_action_send_quadrilateral_title">Send Quadrilateral</string>
+    <string name="menu_action_draw_geometry_title">Draw Geometry</string>
+    <string name="menu_action_measure_distance_title">Measure Distance</string>
 </resources>
